<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_30sdp"
    android:paddingRight="@dimen/_30sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_et"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/ic_account_circle_white_24dp" />

        <EditText
            android:id="@+id/page_login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/edittext_dt"
            android:fontFamily="@string/main_font"
            android:hint="@string/username"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/detail_et"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/ic_vpn_key_white_24dp" />

        <EditText
            android:id="@+id/page_login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/edittext_dt"
            android:fontFamily="@string/main_font"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>