<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.38" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name_full"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_30sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.7"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/detail_et"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/ic_vpn_key_white_24dp" />

            <EditText
                android:id="@+id/page_sync_et_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/edittext_dt"
                android:fontFamily="@string/main_font"
                android:hint="@string/ip"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/page_sync_btnSync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_detail_white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp">

            <Button
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/ic_file_download_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Đồng bộ dữ liệu"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.17"
        android:background="@drawable/background_daydien_blue" />

</LinearLayout>