<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/name_customer" />

    <TextView
        android:id="@+id/f_customer_detail_tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/detail_et2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/address_customer" />

    <TextView
        android:id="@+id/f_customer_detail_tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/detail_et2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/phone_customer" />

    <TextView
        android:id="@+id/f_customer_detail_tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/detail_et2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/btn_detail_orange"
        android:textColor="@color/colorWhite"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="Cập nhật thông tin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/button_disable_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="Mã khách hàng" />

            <TextView
                android:id="@+id/f_customer_detail_tvIdCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/detail_et2" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="Sổ GCS" />

            <TextView
                android:id="@+id/f_customer_detail_tvIdGCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/detail_et2" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/f_customer_detail_lvReport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="@dimen/_5sdp"
        android:background="@color/colorWhite"
        android:divider="@color/colorWhite"
        android:padding="@dimen/_10sdp"/>
</LinearLayout>